--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
+    "@react-native-aria/focus": "^0.2.8",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
@@ -71,6 +72,7 @@
     "react-native": "0.72.3",
     "react-native-builder-bob": "^0.20.0",
     "react-native-safe-area-context": "^4.7.1",
+    "react-native-svg": "^13.10.0",
     "release-it": "^15.0.0",
     "typescript": "^5.0.2"
   },
