--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-themeui",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "Essential cross-platform UI components for React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -53,7 +53,6 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.2.2",
-    "@react-native-aria/focus": "^0.2.8",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
@@ -76,7 +75,9 @@
     "release-it": "^15.0.0",
     "typescript": "^5.0.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@react-native-aria/focus": "^0.2.8"
+  },
   "resolutions": {
     "@types/react": "17.0.21"
   },
